update to using varibles for colors in css

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Sara Lotfi" />
     <meta
       name="keywords"
-      content="HTML, CSS, JavaScript, React, Ruby, website, illustrator, graphic design, web design"
+      content="HTML, CSS, JavaScript, React, Ruby, website, illustrator, graphic design, web design, Uppsala"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
