--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -9,12 +9,12 @@
     />
     <meta
       name="description"
-      content="Web developer and illustrator based in Uppsala, Sweden"
+      content="Jag är en webbutvecklare, webbdesigner och illustratör och bor i Uppsala. Välkommen att kika in min portfolio!"
     />
     <meta name="author" content="Sara Lotfi" />
     <meta
       name="keywords"
-      content="HTML, CSS, JavaScript, React, Ruby, website, illustrator, graphic design, web design, Uppsala"
+      content="HTML, CSS, JavaScript, React, Ruby, hemsida, portfolio, illustratör, grafisk design, webb design, webbdesign, Uppsala"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sara Lotfi | Web developer and illustrator</title>
+    <title>Sara Lotfi | Webbutvecklare och illustratör</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
