--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <title>Sara Lotfi | Webbutvecklare och illustratör</title>
     <meta
       name="description"
       content="Jag är en webbutvecklare, webbdesigner och illustratör och bor i Uppsala. Välkommen att kika in min portfolio!"
@@ -21,6 +22,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="alternate" href="http://saralotfi.dev" hreflang="sv" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -30,7 +32,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sara Lotfi | Webbutvecklare och illustratör</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
