--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="alternate" href="https://saralotfi.dev" hreflang="sv" />
+    <!-- <link rel="alternate" href="https://saralotfi.dev/sv" hreflang="sv" /> -->
+    <!-- <link rel="alternate" href="https://saralotfi.dev/en" hreflang="en" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
