Update last name

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Sara Lotfi | Webbutvecklare och illustratör</title>
+    <title>Sara Woods | Webbutvecklare, webbdesigner och illustratör</title>
     <meta
       name="description"
       content="Jag är en webbutvecklare, webbdesigner och illustratör och bor i Uppsala. Välkommen att kika in min portfolio!"
     />
-    <meta name="author" content="Sara Lotfi" />
+    <meta name="author" content="Sara Woods" />
     <meta
       name="keywords"
       content="HTML, CSS, JavaScript, React, Ruby, hemsida, portfolio, illustratör, grafisk design, webbdesign, webbdesign, Uppsala"
@@ -22,8 +22,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <link rel="alternate" href="https://saralotfi.dev/sv" hreflang="sv" /> -->
-    <!-- <link rel="alternate" href="https://saralotfi.dev/en" hreflang="en" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
