--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,15 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Sara Woods | Webbutvecklare, webbdesigner och illustratör</title>
+    <title>Sara Woods | UI and UX designer, illustrator and developer</title>
     <meta
       name="description"
-      content="Jag är en webbutvecklare, webbdesigner och illustratör och bor i Uppsala. Välkommen att kika in min portfolio!"
+      content="Welcome to check out my portfolio!"
     />
     <meta name="author" content="Sara Woods" />
     <meta
       name="keywords"
-      content="HTML, CSS, JavaScript, React, Ruby, hemsida, portfolio, illustratör, grafisk design, webbdesign, webbdesign, Uppsala"
+      content="UI design, UX design, HTML, CSS, JavaScript, React, Ruby on rails, hemsida, portfolio, illustrator, graphic design"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
