Edit meta title

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Sara Woods | UI and UX designer, illustrator and developer</title>
+    <title>Sara Woods | Designer, illustrator and web developer</title>
     <meta
       name="description"
       content="Welcome to check out my portfolio!"
@@ -15,7 +15,7 @@
     <meta name="author" content="Sara Woods" />
     <meta
       name="keywords"
-      content="UI design, UX design, HTML, CSS, JavaScript, React, Ruby on rails, hemsida, portfolio, illustrator, graphic design"
+      content="UI design, UX design, web design, HTML, CSS, javascript, hemsida, portfolio, illustrator, illustrationer, grafisk design"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
