Update meta description and add meta image

--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,16 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Sara Woods | Designer, illustrator and web developer</title>
+    <title>Sara Woods | Illustrator, graphic designer and web developer</title>
     <meta
       name="description"
-      content="Welcome to check out my portfolio!"
+      content="Welcome to check out my portfolio! Do you need a website, illustrations or a logo? Let's chat!"
     />
     <meta name="author" content="Sara Woods" />
+    <meta property="og:image" content="%PUBLIC_URL%/meta-image.png" />
     <meta
       name="keywords"
-      content="UI design, UX design, web design, HTML, CSS, javascript, hemsida, portfolio, illustrator, illustrationer, grafisk design"
+      content="logotyp, UI design, UX design, web design, HTML, CSS, javascript, hemsida, portfolio, illustrator, illustratör, grafisk design"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
