--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       name="keywords"
       content="logotyp, UI design, UX design, web design, HTML, CSS, javascript, hemsida, portfolio, illustrator, illustratör, grafisk design"
     />
+    <meta name="google-site-verification" content="bdC5vWVCcUxwH92o8ZBJDUHHvIBK60oPmjsCdfkry_I" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
