Add missing open graph meta data

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
       content="Welcome to check out my portfolio! Do you need a website, illustrations or a logo? Let's chat!"
     />
     <meta name="author" content="Sara Woods" />
+    <meta property="og:title" content="Sara Woods | Illustrator, graphic designer and web developer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sarawoodsdesign.com" />
     <meta property="og:image" content="%PUBLIC_URL%/meta-image.png" />
     <meta
       name="keywords"
